Добавление моделирование выигрывающего бота

--- a/data/players.ini
+++ b/data/players.ini
@@ -1,9 +1,15 @@
-[Геннадий]
-побед = 2
-поражений = 3
-ничьих = 5
+[Р“РµРЅРЅР°РґРёР№]
+рїрѕр±рµрґ = 2
+рїрѕсђр°р¶рµрѕрёр№ = 3
+рѕрёс‡сњрёс… = 5
 
-[Дмитрий]
+[Р”РјРёС‚СЂРёР№]
+рїрѕр±рµрґ = 0
+рїрѕсђр°р¶рµрѕрёр№ = 0
+рѕрёс‡сњрёс… = 0
+
+[Алексей]
 побед = 0
 поражений = 0
 ничьих = 0
+
